<resources>
    <string name="app_name">My App Portofolio</string>

    <string name="my_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="media_streamer">Spotify Streamer</string>
    <string name="super_duo1">Scores App</string>
    <string name="super_duo2">Library App</string>
    <string name="ant_terminator">Build It Bigger</string>
    <string name="materialize">Bacon Reader</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="toast_text">This button will launch </string>
</resources>
